--- a/ProyectoFinal-Aplicada2/ProyectoFinal-Aplicada2.csproj
+++ b/ProyectoFinal-Aplicada2/ProyectoFinal-Aplicada2.csproj
@@ -5,4 +5,12 @@
     <RootNamespace>ProyectoFinal_Aplicada2</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="microsoft.entityframeworkcore.sqlite" Version="3.1.2" />
+    <PackageReference Include="microsoft.entityframeworkcore.tools" Version="3.1.2">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
 </Project>
