--- a/ProyectoFinal-Aplicada2/ProyectoFinal-Aplicada2.csproj
+++ b/ProyectoFinal-Aplicada2/ProyectoFinal-Aplicada2.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>ProyectoFinal_Aplicada2</RootNamespace>
+     <StartWorkingDirectory>$(MSBuildProjectDirectory)</StartWorkingDirectory>
   </PropertyGroup>
 
   <ItemGroup>
