--- a/ProyectoFinal-Aplicada2/ProyectoFinal-Aplicada2.csproj
+++ b/ProyectoFinal-Aplicada2/ProyectoFinal-Aplicada2.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Blazored.Toast" Version="2.0.9" />
     <PackageReference Include="Microsoft.AspNetCore.Authorization" Version="3.1.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Blazor.HttpClient" Version="3.2.0-preview2.20160.5" />
     <PackageReference Include="Microsoft.AspNetCore.Components" Version="3.1.2" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="3.1.2" />
     <PackageReference Include="microsoft.entityframeworkcore.sqlite" Version="3.1.2" />
