--- a/ProyectoFinal-Aplicada2Tests1/ProyectoFinal-Aplicada2Tests1.csproj
+++ b/ProyectoFinal-Aplicada2Tests1/ProyectoFinal-Aplicada2Tests1.csproj
@@ -10,6 +10,11 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authorization" Version="3.1.2" />
     <PackageReference Include="Microsoft.AspNetCore.Blazor.HttpClient" Version="3.2.0-preview2.20160.5" />
+    <PackageReference Include="microsoft.entityframeworkcore.sqlite" Version="3.1.3" />
+    <PackageReference Include="microsoft.entityframeworkcore.tools" Version="3.1.3">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.0.0" />
     <PackageReference Include="MSTest.TestFramework" Version="2.0.0" />
@@ -18,6 +23,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ProyectoFinal-Aplicada2\ProyectoFinal-Aplicada2.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Models\" />
   </ItemGroup>
 
 </Project>
